--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,8 @@
 				<version>2.5.1</version>
 				<configuration>
 					<encoding>utf8</encoding>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
